# mv-people

./: .gitignore  Makefile  README.md  launcher.py  mv-people.spec  pyproject.toml
models/: MobileNetSSD_deploy.caffemodel
src/mv_people/: detector.py  main.py  viewer.py
tests/: test_detector.py  test_history.py
